parser10/tree-sitter-able/test/corpus/option_handling.txt
=================
Option Handling
=================

fn handle(config_port, loader) {
  port := config_port else { 8080 }
  data := loader() else { |err|
    log(err.message())
    []
  }
  propagated := loader()! else {
    recover_default()
  }
}
---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier)))
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (handling_expression
              (assignment_expression
                (assignment_target
                  (pattern_base
                    (identifier)))
                (assignment_operator)
                (assignment_expression
                  (range_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (identifier))))))))))))))))))
              (else_clause
                (handling_block
                  (expression_statement
                    (pipe_expression
                      (matchable_expression
                        (assignment_expression
                          (range_expression
                            (logical_or_expression
                              (logical_and_expression
                                (bitwise_or_expression
                                  (bitwise_xor_expression
                                    (bitwise_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (shift_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (unary_expression
                                                  (exponent_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (number_literal))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (handling_expression
              (assignment_expression
                (assignment_target
                  (pattern_base
                    (identifier)))
                (assignment_operator)
                (assignment_expression
                  (range_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (identifier))
                                              (call_suffix)))))))))))))))))
              (else_clause
                (handling_block
                  (identifier)
                  (expression_statement
                    (pipe_expression
                      (matchable_expression
                        (assignment_expression
                          (range_expression
                            (logical_or_expression
                              (logical_and_expression
                                (bitwise_or_expression
                                  (bitwise_xor_expression
                                    (bitwise_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (shift_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (unary_expression
                                                  (exponent_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (identifier))
                                                      (call_suffix
                                                        (pipe_expression
                                                          (matchable_expression
                                                            (assignment_expression
                                                              (range_expression
                                                                (logical_or_expression
                                                                  (logical_and_expression
                                                                    (bitwise_or_expression
                                                                      (bitwise_xor_expression
                                                                        (bitwise_and_expression
                                                                          (equality_expression
                                                                            (comparison_expression
                                                                              (shift_expression
                                                                                (additive_expression
                                                                                  (multiplicative_expression
                                                                                    (unary_expression
                                                                                      (exponent_expression
                                                                                        (postfix_expression
                                                                                          (primary_expression
                                                                                            (identifier))
                                                                                          (member_access
                                                                                            (identifier))
                                                                                          (call_suffix)))))))))))))))))))))))))))))))))))))
                  (expression_statement
                    (pipe_expression
                      (matchable_expression
                        (assignment_expression
                          (range_expression
                            (logical_or_expression
                              (logical_and_expression
                                (bitwise_or_expression
                                  (bitwise_xor_expression
                                    (bitwise_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (shift_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (unary_expression
                                                  (exponent_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (array_literal))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (identifier))
                                            (call_suffix))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (struct_literal
                                                (qualified_identifier
                                                  (identifier))
                                                (struct_literal_element
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier))
                                                                                    (call_suffix)))))))))))))))))))))))))))))))))))))))))))
