parser10/tree-sitter-able/test/corpus/string_interpolation.txt
======================
String Interpolation
======================

fn render(user, items) {
  greeting := `Hello, ${user.name}!`
  summary := `Total items: ${items.length()}`
  escapes := `Use \` to keep backticks and \$ to keep dollars`
  nested := `First item: ${if items.length() > 0 { items[0] } else { "none" }}`
  adjacent := `a${1}b${2}`
}
---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier)))
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (interpolated_string
                                                (interpolation_text)
                                                (string_interpolation
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier))
                                                                                    (member_access
                                                                                      (identifier))))))))))))))))))))
                                                (interpolation_text))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (interpolated_string
                                                (interpolation_text)
                                                (string_interpolation
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier))
                                                                                    (member_access
                                                                                      (identifier))
                                                                                    (call_suffix))))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (interpolated_string
                                                (interpolation_text))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (interpolated_string
                                                (interpolation_text)
                                                (string_interpolation
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (if_expression
                                                                                        (pipe_expression
                                                                                          (matchable_expression
                                                                                            (assignment_expression
                                                                                              (range_expression
                                                                                                (logical_or_expression
                                                                                                  (logical_and_expression
                                                                                                    (bitwise_or_expression
                                                                                                      (bitwise_xor_expression
                                                                                                        (bitwise_and_expression
                                                                                                          (equality_expression
                                                                                                            (comparison_expression
                                                                                                              (shift_expression
                                                                                                                (additive_expression
                                                                                                                  (multiplicative_expression
                                                                                                                    (unary_expression
                                                                                                                      (exponent_expression
                                                                                                                        (postfix_expression
                                                                                                                          (primary_expression
                                                                                                                            (identifier))
                                                                                                                          (member_access
                                                                                                                            (identifier))
                                                                                                                          (call_suffix)))))))
                                                                                                              (shift_expression
                                                                                                                (additive_expression
                                                                                                                  (multiplicative_expression
                                                                                                                    (unary_expression
                                                                                                                      (exponent_expression
                                                                                                                        (postfix_expression
                                                                                                                          (primary_expression
                                                                                                                            (number_literal)))))))))))))))))))
                                                                                        (block
                                                                                          (expression_statement
                                                                                            (pipe_expression
                                                                                              (matchable_expression
                                                                                                (assignment_expression
                                                                                                  (range_expression
                                                                                                    (logical_or_expression
                                                                                                      (logical_and_expression
                                                                                                        (bitwise_or_expression
                                                                                                          (bitwise_xor_expression
                                                                                                            (bitwise_and_expression
                                                                                                              (equality_expression
                                                                                                                (comparison_expression
                                                                                                                  (shift_expression
                                                                                                                    (additive_expression
                                                                                                                      (multiplicative_expression
                                                                                                                        (unary_expression
                                                                                                                          (exponent_expression
                                                                                                                            (postfix_expression
                                                                                                                              (primary_expression
                                                                                                                                (identifier))))))))))))))))))))
                                                                                          (expression_statement
                                                                                            (pipe_expression
                                                                                              (matchable_expression
                                                                                                (assignment_expression
                                                                                                  (range_expression
                                                                                                    (logical_or_expression
                                                                                                      (logical_and_expression
                                                                                                        (bitwise_or_expression
                                                                                                          (bitwise_xor_expression
                                                                                                            (bitwise_and_expression
                                                                                                              (equality_expression
                                                                                                                (comparison_expression
                                                                                                                  (shift_expression
                                                                                                                    (additive_expression
                                                                                                                      (multiplicative_expression
                                                                                                                        (unary_expression
                                                                                                                          (exponent_expression
                                                                                                                            (postfix_expression
                                                                                                                              (primary_expression
                                                                                                                                (array_literal
                                                                                                                                  (pipe_expression
                                                                                                                                    (matchable_expression
                                                                                                                                      (assignment_expression
                                                                                                                                        (range_expression
                                                                                                                                          (logical_or_expression
                                                                                                                                            (logical_and_expression
                                                                                                                                              (bitwise_or_expression
                                                                                                                                                (bitwise_xor_expression
                                                                                                                                                  (bitwise_and_expression
                                                                                                                                                    (equality_expression
                                                                                                                                                      (comparison_expression
                                                                                                                                                        (shift_expression
                                                                                                                                                          (additive_expression
                                                                                                                                                            (multiplicative_expression
                                                                                                                                                              (unary_expression
                                                                                                                                                                (exponent_expression
                                                                                                                                                                  (postfix_expression
                                                                                                                                                                    (primary_expression
                                                                                                                                                                      (number_literal))))))))))))))))))))))))))))))))))))))))
                                                                                        (block
                                                                                          (expression_statement
                                                                                            (pipe_expression
                                                                                              (matchable_expression
                                                                                                (assignment_expression
                                                                                                  (range_expression
                                                                                                    (logical_or_expression
                                                                                                      (logical_and_expression
                                                                                                        (bitwise_or_expression
                                                                                                          (bitwise_xor_expression
                                                                                                            (bitwise_and_expression
                                                                                                              (equality_expression
                                                                                                                (comparison_expression
                                                                                                                  (shift_expression
                                                                                                                    (additive_expression
                                                                                                                      (multiplicative_expression
                                                                                                                        (unary_expression
                                                                                                                          (exponent_expression
                                                                                                                            (postfix_expression
                                                                                                                              (primary_expression
                                                                                                                                (string_literal))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
